Fix scrollbar update and input boxes going to next line

--- a/scorystapp/static/css/style.css
+++ b/scorystapp/static/css/style.css
@@ -988,6 +988,7 @@ footer .amp {
 
 .grade-overview .filtering {
   margin-top: -4px;
+  font-size: 14px;
 }
 
 .grade-overview .gray {
